[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/scripts/Door.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/door.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/sfx.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/player/buy(cha_ching).wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/player/notenoughmoney.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 80 )

[node name="Door" type="StaticBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="doorareaRight" type="Area2D" parent="."]
collision_layer = 2

[node name="right" type="CollisionShape2D" parent="doorareaRight"]
position = Vector2( 64, 80 )
shape = SubResource( 1 )

[node name="door" type="CollisionShape2D" parent="."]
position = Vector2( 32, 80 )
shape = SubResource( 2 )

[node name="PricelabelRight" type="Label" parent="."]
margin_left = 64.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.141176, 1, 0.607843, 1 )
text = "
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PricelabelLeft" type="Label" parent="."]
margin_left = -64.0
margin_top = 32.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.141176, 1, 0.607843, 1 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doorareaLeft" type="Area2D" parent="."]
collision_layer = 2

[node name="left" type="CollisionShape2D" parent="doorareaLeft"]
position = Vector2( 0, 80 )
shape = SubResource( 1 )

[node name="doorSprite" type="Sprite" parent="."]
position = Vector2( 32, 80 )
scale = Vector2( 1, 1.25 )
z_index = 32
texture = ExtResource( 2 )

[node name="sfx" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="buy" type="Node2D" parent="sfx"]

[node name="BuySound" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 4 )
volume_db = 1.0
bus = "Soundeffects"

[node name="BuySound2" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 4 )
volume_db = 1.0
pitch_scale = 0.99
bus = "Soundeffects"

[node name="BuySound3" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 4 )
volume_db = 1.0
pitch_scale = 1.01
bus = "Soundeffects"

[node name="not_enough_money" type="Node2D" parent="sfx"]

[node name="notenoughmoney" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 5 )
volume_db = 2.0
bus = "Soundeffects"

[node name="notenoughmoney2" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 5 )
volume_db = 2.0
pitch_scale = 0.98
bus = "Soundeffects"

[node name="notenoughmoney3" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 5 )
volume_db = 2.0
pitch_scale = 1.03
bus = "Soundeffects"

[connection signal="play_sound" from="." to="sfx" method="_on_Door_play_sound"]
[connection signal="body_entered" from="doorareaRight" to="." method="_on_doorareaRight_body_entered"]
[connection signal="body_exited" from="doorareaRight" to="." method="_on_doorareaRight_body_exited"]
[connection signal="body_entered" from="doorareaLeft" to="." method="_on_doorareaLeft_body_entered"]
[connection signal="body_exited" from="doorareaLeft" to="." method="_on_doorareaLeft_body_exited"]
